[tool.poetry]
name = "goit-web-hw-06"
version = "0.1.0"
description = ""
authors = ["dimaklymenko <dimaliar228@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^33.1.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
